Serveur: stabilité JVM — reframe game.jar (StackMapTable) + retrait -Xverify:none
Enquête « crash addHeroEXP » (demande user). Conclusions vérifiées :

1. Le crash addHeroEXP (ClientErrorCodeException: ERROR []) NE se reproduit
   plus = artefact d'un état compilé pré-fix.

2. Vrai incident intermittent = crash JVM (SIGABRT, pas exception de jeu) :
   « Illegal class file … in method getDefaultStats » dans generateOopMap.cpp
   pendant un GC. Le bytecode dex2jar de game.jar sans StackMapTable, sous
   -Xverify:none, fait planter l'inférence oop-map au GC (~1 run/8). Le
   serveur autoritatif y était exposé aussi (run-online.sh tournait
   -Xverify:none), pas seulement les smoke tests.

   Fix durable (comme le client) : tools/reframe/ReframeJar (ASM 9.7,
   COMPUTE_FRAMES) réécrit les 64 196 classes de game.jar avec des frames
   valides -> vérificateur rapide par table, plus de generateOopMap, retrait
   de -Xverify:none. Appliqué à run-online.sh (serveur) et server/smoke/run.sh
   (reframe à la demande vers libs/game-framed.jar, gitignoré/régénérable).
   TieredStopAtLevel=1 conservé (prudence C2). Sémantique inchangée.

   Vérifié : ChargeTest 15/15 sans abort (vs abort intermittent avant), boot
   serveur 0 fatal sous vérif par défaut, régression identique
   (ResourceTest/CampaignAttackTest/CampaignPersistTest verts sur le framed
   jar). HandshakeRoundTrip retiré du harnais (obsolète, ancien ctor
   LoginServer — SHIMS TODO #4).

3. Stamina « 39,96 M » = fidèle content update R102, PAS un bug (hypothèse
   « timestamp mal enregistré » réfutée) : STORED=114 + timestamp corrects ;
   getResourceCap(STAMINA)=120 (cap dépensable) ; le brut vient d'un tick de
   régén R102 non-capé, affiché min(brut,120)=120. ChainProbe : effective
   toujours <=120, gold chaîne 340->680->1088->1632, 0 crash logique.

Docs : JOURNAL (entrée 2026-07-16), MEMORY (état courant + correction de la
description stamina obsolète), SHIMS (row reframe). Aucune modif de logique
de jeu ni de s